# rl-debate-tsf

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
distdeb/agents/: __init__.py  arima_agent.py  base.py  chronos_agent.py  llmtime_agent.py  moirai_agent.py  timesfm_agent.py
distdeb/aggregation/: __init__.py  quantile.py
distdeb/baselines/: __init__.py  conformal.py
distdeb/data/: __init__.py  loaders.py
distdeb/env/: __init__.py  refinement_env.py
distdeb/eval/: __init__.py  metrics.py
distdeb/orchestrator/: __init__.py  encoders.py  policy.py  ppo.py
distdeb/utils/: __init__.py  cache.py
paper/: README.md  TODO.md  main.tex  references.bib
scripts/: colab_cells.md  diag_conformal.py  diag_oracle.py  diag_within_dataset.py  download_etth1.py  generate_figures.py  pilot_gate1.py  pilot_gate1_sweep.py  pilot_gate1c.py  pilot_gate1d.py  pilot_gate1e.py  pilot_gate2.py  smoke_agent.py  smoke_etth1.py
tests/: test_cache.py  test_env.py  test_metrics.py
